k8s-manifest-files/namespace.yml
# namespace manifest files
apiVersion: v1
kind: Namespace
metadata:
  name: microservice-ns
