k8s-manifest-files/deployment.yml
# Deployment - the core workload

apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment
  namespace: microservice-ns
spec:
  #run 3 replicas of our pod for high availability
  replicas: 3

  # which pod does this deployment manage
  selector:
    matchLabels:
      app: microservice-ns

  # strategy how to rollback out updates
  strategy:
    type: type:RollingUpadate
    rollingUpadate:
      maxSurge: 1 # allow extra pod during update
      maxUnavailable: 0 # never take down before a new pod is read

  template:
    metadata:
      name: microservice-deployment
      labels:
        app: microservice-ns
      version: latest
    spec:
      containers:
        - name: todo-app
          image: <account>.dkr.ecr.us-eats-2.amazonaws.com/todo-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          # liveliness probe - it container alive ? restart if fails
          livelinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30 # wait 30 sec before first check
            periodSeconds: 10 # check every 10 sec
            failureThreshold: 3 # restart after 3 consecutive failure

          # readiness probe - is the container ready to receive the traffic?
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3

          #startup probes: for slow starting apps: disable liveliness and readiness
          # during startup
          startupProbe:
            httpGet:
              path: ./health
              port: 3000
            periodeSeconds: 10
            failureThreshold: 30

          volumeMounts:
            - name: microservice-volume
              mountPath: /tmp

    volumes:
      - name: microservice-volume
        emptyDir: {}
